--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-*{text-align: center;}
+* {
+    text-align: center;
+}
 
-h1 {font-size: 50px;}
+h1 {
+    font-size: 50px;
+}
 
-label {line-height: 40px;}
+label {
+    line-height: 40px;
+}
 
-button {background-color: red}
+button {
+    background-color: yellowgreen;
+    margin-top: 10px;
+}
+
